@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-09-12T16:31:23Z",
-  "count_outdated" : 2395,
-  "uniques_outdated" : 576,
-  "count" : 2442,
+  "timestamp" : "2022-09-13T02:10:10Z",
+  "count_outdated" : 2397,
+  "uniques_outdated" : 577,
+  "count" : 2443,
   "uniques" : 609,
   "clones" : [
     {
-      "timestamp": "2022-08-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-08-30T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -91,8 +84,8 @@
     },
     {
       "timestamp": "2022-09-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
