@@ -1,15 +1,10 @@
 {
-  "count": 47,
+  "count": 46,
   "uniques": 19,
   "clones": [
     {
-      "timestamp": "2022-08-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-08-30T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -64,7 +59,7 @@
     },
     {
       "timestamp": "2022-09-12T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
