@@ -1,3 +1,11 @@
+2022-09-13T02:10:10Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3041876945
+* notice: last 14d: unq all: 19 46
+* notice: prev accum: outdated-unq outdated-all / unq all: 576 2395 / 609 2442
+* notice: next accum: outdated-unq outdated-all / unq all: 577 2397 / 609 2443
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [2022-08-29] / [2022-08-30 2022-09-12]
+
 2022-09-12T16:31:23Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3038958200
 * notice: last 14d: unq all: 19 47
